--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: "Montserrat", sans-serif;
@@ -10,43 +10,43 @@
     min-height: 100vh;
     background: linear-gradient(135deg, #153677, #4e085f);
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .todo-app {
     width: 100%;
     max-width: 540px;
     background: #fff;
-    margin: 100px auto 20px;
     padding: 40px 30px 70px;
     border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
+
 .todo-app h2 {
     color: #002765;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 40px;
-    margin-bottom:20px;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .logo_container {
     display: flex;
-    align-items: center;
     justify-content: center;
+    margin-bottom: 20px;
 }
-.todo-app img  {
-    width: 150px;
+
+.todo-app img {
+    width: 120px;
 }
 
 .row {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     background: #edeef0;
     border-radius: 30px;
-    padding-left: 20px;
+    padding: 10px;
     margin-bottom: 25px;
-
 }
 
 input {
@@ -55,28 +55,33 @@ input {
     outline: none;
     background: transparent;
     padding: 10px;
+    font-size: 16px;
 }
 
 button {
     border: none;
     outline: none;
-    padding: 16px 50px;
+    padding: 12px 30px;
     background: #ffff66;
-    color: #000000;
+    color: #000;
     font-size: 16px;
     cursor: pointer;
     border-radius: 40px;
 }
 
+ul {
+    list-style: none;
+    padding: 0;
+}
+
 ul li {
     display: flex;
     align-items: center;
-    list-style: none;
     font-size: 17px;
     padding: 12px 8px 12px 50px;
     user-select: none;
     cursor: pointer;
-    position:relative;
+    position: relative;
     font-weight: 600;
 }
 
@@ -94,14 +99,13 @@ ul li::before {
 }
 
 ul li.checked {
-    color:#555;
+    color: #555;
     text-decoration: line-through;
 }
 
 ul li.checked::before {
     background-image: url(/assets/checked.png);
 }
-
 
 ul li span {
     position: absolute;
@@ -118,4 +122,100 @@ ul li span {
 
 ul li span:hover {
     background: #edeef0;
+}
+
+/* ------------------------------
+    📌 MEDIA QUERIES (Responsivo)
+   ------------------------------ */
+
+/* Ajuste para telas menores (máx. 768px) */
+@media screen and (max-width: 768px) {
+    .todo-app {
+        max-width: 90%;
+        padding: 30px 20px;
+    }
+
+    .todo-app img {
+        width: 100px;
+    }
+
+    input {
+        font-size: 14px;
+        padding: 8px;
+    }
+
+    button {
+        padding: 10px 20px;
+        font-size: 14px;
+    }
+
+    ul li {
+        font-size: 15px;
+        padding: 10px 5px 10px 40px;
+    }
+
+    ul li::before {
+        height: 24px;
+        width: 24px;
+        top: 6px;
+        left: 6px;
+    }
+
+    ul li span {
+        width: 35px;
+        height: 35px;
+        font-size: 20px;
+    }
+}
+
+/* Ajuste para celulares pequenos (máx. 480px) */
+@media screen and (max-width: 480px) {
+    .todo-app {
+        max-width: 95%;
+        padding: 20px 15px;
+    }
+
+    .todo-app h2 {
+        font-size: 20px;
+    }
+
+    .todo-app img {
+        width: 80px;
+    }
+
+    .row {
+        flex-direction: column;
+        padding: 5px;
+    }
+
+    input {
+        width: 100%;
+        font-size: 14px;
+        padding: 10px;
+        margin-bottom: 10px;
+    }
+
+    button {
+        width: 100%;
+        padding: 12px;
+        font-size: 14px;
+    }
+
+    ul li {
+        font-size: 14px;
+        padding: 8px 5px 8px 35px;
+    }
+
+    ul li::before {
+        height: 20px;
+        width: 20px;
+        top: 5px;
+        left: 5px;
+    }
+
+    ul li span {
+        width: 30px;
+        height: 30px;
+        font-size: 18px;
+    }
 }
